--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --inline",
+    "dev": "webpack-dev-server --inline -d",
     "build": "webpack"
   },
   "keywords": [
@@ -16,13 +16,15 @@
   "author": "sorthvid",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^1.13.1",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "eventemitter3": "^1.2.0"
+    "eventemitter3": "^1.2.0",
+    "global": "^4.3.1",
+    "underscore": "^1.8.3"
   }
 }
