--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Very slim ES5 javascript framework consisting of one extendable baseclass. Inspired by backbones view class but with no dependencies.   ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/index.test.js -w",
     "dev": "webpack-dev-server --inline -d",
     "build": "webpack"
   },
@@ -23,8 +23,10 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "chai": "^3.5.0",
     "eventemitter3": "^1.2.0",
     "global": "^4.3.1",
+    "mocha": "^3.1.2",
     "underscore": "^1.8.3"
   }
 }
