--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kerneljs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Very slim ES5 javascript framework consisting of one extendable baseclass. Inspired by backbones view class but with no dependencies.   ",
-  "main": "index.js",
+  "main": "dist/kernel.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --inline",
