--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kerneljs",
   "version": "1.0.0",
   "description": "Very slim ES5 javascript framework consisting of one extendable baseclass. Inspired by backbones view class but with no dependencies.   ",
-  "main": "index.js",
+  "main": "dist/kernel.js",
   "scripts": {
     "test": "mocha test/index.test.js -w",
     "dev": "webpack-dev-server --inline -d",
