--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
+    "global": "^4.3.1",
+    "mocha": "^3.1.2",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "chai": "^3.5.0",
-    "global": "^4.3.1",
-    "mocha": "^3.1.2",
-    "underscore": "^1.8.3"
+    "es6-event-emitter": "^1.5.2",
+    "popmotion": "^5.0.20"
   }
 }
