--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.20.0",
+    "babel-runtime": "^6.20.0",
+    "core-js": "^2.4.1",
     "documentation-loader": "^0.1.1-beta",
     "es6-event-emitter": "^1.5.2",
     "popmotion": "^5.0.20"
