--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha test/index.test.js -w",
     "dev": "webpack-dev-server --inline -d",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "git reset --hard; git pull; npm install; run build"
   },
   "keywords": [
     "ES6",
