--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "global": "^4.3.1",
     "mocha": "^3.1.2",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^1.14.1",
+    "documentation-loader": "^0.1.1-beta",
     "babel-polyfill": "^6.20.0",
     "babel-runtime": "^6.20.0",
-    "core-js": "^2.4.1",
-    "documentation-loader": "^0.1.1-beta",
-    "es6-event-emitter": "^1.5.2",
-    "popmotion": "^5.0.20"
+    "core-js": "^2.4.1"
+  },
+  "dependencies": {
+    "es6-event-emitter": "^1.5.2"
   }
 }
