--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "chai": "^3.5.0",
-    "global": "^4.3.1",
-    "mocha": "^3.1.2",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.14.1",
-    "documentation-loader": "^0.1.1-beta",
     "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.20.0",
-    "core-js": "^2.4.1"
+    "chai": "^3.5.0",
+    "core-js": "^2.4.1",
+    "documentation-loader": "^0.1.1-beta",
+    "global": "^4.3.1",
+    "jsdom": "9.9.1",
+    "jsdom-global": "2.1.1",
+    "mocha": "^3.1.2",
+    "mocha-jsdom": "^1.1.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "es6-event-emitter": "^1.5.2"
