--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Very slim ES6 javascript framework. Based around a View class. Kerneljs is aimed at progressive enhanced web development",
   "main": "dist/kernel.js",
   "scripts": {
-    "test": "mocha test/index.test.js -w",
+    "test": "mocha --require babel-register test/**/*.test.js",
     "dev": "webpack-dev-server --inline -d",
     "build": "webpack",
     "deploy": "git reset --hard; git checkout master; git pull"
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.18.0",
     "babel-runtime": "^6.20.0",
     "chai": "^3.5.0",
     "core-js": "^2.4.1",
