--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "progressive enhancement"
   ],
   "author": "sorthvid",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
