--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kerneljsorthvid",
+  "name": "kerneljsorthvid-view",
   "version": "2.1.0",
   "description": "Very slim ES6 javascript framework. Based around a View class. Kerneljs is aimed at progressive enhanced web development",
   "main": "dist/kernel.js",
