--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:sorthvid_dk/kerneljs.git"
+    "url": "https://github.com/sorthvidk/kerneljs"
   },
   "bugs": {
     "url": "https://bitbucket.org/sorthvid_dk/kerneljs/issues"
